--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
     </p>
 
     <div class="main_img">
-      <img src="images/hero-img1.jpg" alt="" class="fliter-img">
+      <img src="img/hero-img1.jpg" alt="" class="fliter-img">
     </div>
 
     <div class="main_img">
-        <img src="images/hero-img2.jpg" alt="" class="fliter-img">
+        <img src="img/hero-img2.jpg" alt="" class="fliter-img">
     </div>
 
     <div class="main_img">
-        <img src="images/hero-img3.jpg" alt="" class="fliter-img">
+        <img src="img/hero-img3.jpg" alt="" class="fliter-img">
     </div>
 
     <a href="#" class="scroll-button"><span></span><span></span><span></span></a>
@@ -89,7 +89,7 @@
 <!-- works1 -->
   <div class="row">
     <div class="col-xs-6 works-image">
-      <img src="/images/keyboard.jpg" alt="">
+      <img src="img/keyboard.jpg" alt="">
     </div>
     <div class="col-xs-6 works-text">
       <div class="text-container">
@@ -121,14 +121,14 @@
     </div>
 
     <div class="col-xs-7 works-image-odd">
-      <img src="/images/coffeehouse.jpg" alt="">
+      <img src="img/coffeehouse.jpg" alt="">
     </div>                
   </div>
 
 <!-- works3 -->
   <div class="row">
     <div class="col-xs-6 works-image">
-      <img src="/images/wordpress.jpg" alt="">
+      <img src="img/wordpress.jpg" alt="">
     </div>
     <div class="col-xs-6 works-text">
       <div class="text-container">
@@ -168,7 +168,7 @@
   <div class="row section-body">
       <div class="col">
           <div class="about-img">
-            <img src="/images/face.png" alt="" class="about-me">
+            <img src="img/face.png" alt="" class="about-me">
           </div>
       </div>
 
