--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 ---------------------------------------->
 
     <div class="sidemenu-left">
-      <ul class="sidemenu-list">
+      <ul class="sidemenu-list fixed">
         <li id="menu-item1"><a href="#"><span>Home</span></a></li>
         <li id="menu-item2"><a href="#"><span>Works</span></a></li>
         <li id="menu-item3"><a href="#"><span>About</span></a></li>
@@ -55,7 +55,7 @@
 ---------------------------------------->
 <div class="row rellax">
 
-  <div class="hero_imgBox">
+  <div class="hero_imgBox rellax">
       <p class="hero-lyer-text">
           I'm Taichi Tsujioka.<br>
           Japanese Front-end Developer,<br>
@@ -93,11 +93,15 @@
 ---------------------------------------->
 <!-- works1 -->
   <div class="row" id="works1">
+
       
-      <div class="col-xs-7 works-image">
+      <div class="col-xs-7 works-image comming-relative">
         <a href="#" class="works-image-link">
           <img src="img/keyboard.jpg" alt="" id="works-image-link1">
         </a>
+        <div class="comming-container">
+            <img src="img/Coming-Soon.png" alt="" class="comming-soon">
+          </div>
       </div>
 
       <div class="col-xs-3 works-text">
@@ -118,6 +122,7 @@
       </a> 
       </div>      
               
+
   </div>
 
 <!-- works2 -->
@@ -137,20 +142,26 @@
         <div class="triangle-odd"></div>
     </div>
 
-    <div class="col-xs-7 works-image-odd">
+    <div class="col-xs-7 works-image-odd comming-relative">
       <a href="#" class="works-image-link">
         <img src="img/coffeehouse.jpg" alt="" id="works-image-link2">
       </a>
+      <div class="comming-container">
+          <img src="img/Coming-Soon.png" alt="" class="comming-soon">
+        </div>
     </div>                
   </div>
 
 <!-- works3 -->
   <div class="row" id="works3">
 
-    <div class="col-xs-7 works-image">
+    <div class="col-xs-7 works-image comming-relative">
       <a href="#" class="works-image-link">
           <img src="img/wordpress.jpg" alt="" id="works-image-link3">
       </a>
+      <div class="comming-container">
+          <img src="img/Coming-Soon.png" alt="" class="comming-soon">
+      </div>
     </div>
 
     <div class="col-xs-3 works-text">
@@ -180,7 +191,7 @@
 *            about-selection           
 *                
 ---------------------------------------->
-<div class="container">
+<div class="container midnightHeader default">
 
   <!-- about-title -->
   <div class="row" data-midnight="white">
@@ -467,6 +478,16 @@ sr.reveal( '.slide-bottom2', { origin: 'bottom' , distance: '30%', duration: 900
 <script src="js/midnight.jquery.js"></script>
 <script>
 $(document).ready(function(){
+  $('ul.fixed').midnight();
+});
+</script>
+
+<!-- midnight.js -->
+<script src="/js/midnight.jquery.js"></script>
+<script>
+// Start midnight
+$(document).ready(function(){
+  // Change this to the correct selector.
   $('ul.fixed').midnight();
 });
 </script>
